--- a/resources/views/index.html
+++ b/resources/views/index.html
@@ -92,7 +92,7 @@ Tulis konten markdown Anda di sini...
                     </label>
                     <div class="flex items-center relative">
                         <span class="bg-slate-100 text-slate-600 px-2 sm:px-4 py-2 sm:py-3 rounded-l-lg border border-r-0 border-slate-300 text-xs sm:text-sm font-medium whitespace-nowrap">
-                            slugpost.com/
+                            promo.dijual.in/
                         </span>
                         <input 
                             type="text" 
