--- a/resources/views/inertia.html
+++ b/resources/views/inertia.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SlugPost - Publish & Share Markdown Instantly</title>
+    <title>SlugPost - Terbitkan & Bagikan Markdown Secara Instan</title>
     <link rel="icon" type="image/png" sizes="32x32" href="/public/favicon-32x32.png">
     <link rel="stylesheet" href="/js/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css">
-   
+    
 </head>
-<body  >
+<body >
     <div id="app" data-page="{{it.page}}"></div>
  
  
